--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,18 @@
 <h1>{{ title }}</h1>
-<nav>
-  <a routerLink="/home">Home</a>
-  <a routerLink="/training">Training</a>
-  <a routerLink="/watertracking">WaterTracking</a>
-</nav>
+<nav class="navbar" role="navigation" aria-label="main navigation">
+  <div id="navbarBasicExample" class="navbar-menu">
+    <div class="navbar-start">
+      <a class="navbar-item" routerLink="/training">
+        Training
+      </a>
+
+      <a class="navbar-item" routerLink="/water-tracking">
+        Water-Tracking
+      </a>
+    </div>
+  </div>
+
+<mat-checkbox>Subscribe</mat-checkbox>
+
 <router-outlet></router-outlet>
+
