--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,8 @@
+@import "../../node_modules/@angular/material/prebuilt-themes/indigo-pink.css";
+
 .app-wrapper {
   height: 100vh;
   width: 100%;
 }
+
+
