--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,1 +1,15 @@
-<p>home works!</p>
+<div class="bg"></div>
+<h1>{{ title }}</h1>
+
+<nav class="navbar" role="navigation" aria-label="main navigation">
+  <div id="navbarBasicExample" class="navbar-menu">
+    <div class="navbar-start">
+      <section>
+        <div class="example-button-row">
+          <a class="navbar-water" routerLink="/water-tracking"><button mat-raised-button color="primary">Water</button></a>
+          <a class="navbar-training" routerLink="/training"><button mat-raised-button color="primary">Sport</button></a>
+        </div>
+      </section>
+    </div>
+  </div>
+</nav>
