--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,6 @@
 @import "../../node_modules/@angular/material/prebuilt-themes/indigo-pink.css";
 
 .app-wrapper {
-  height: 100vh;
+  height: 100%;
   width: 100%;
 }
-
-
